# security-ai-labs

./: README.md
.github/workflows/: security.yaml
notes/: day1.md  day10.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md
scripts/: security_check.sh
tools/logscan/: pyproject.toml
tools/logscan/src/logscan/: scanner.py
tools/portscanner/: README.md  pyproject.toml
tools/portscanner/src/portscanner/: scanner.py
