[project]
name = "portscanner"
version = "0.1.0"
description = ""
authors = [
    {name = "chandramouly",email = "chandramouly.techseeker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "portscanner", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
portscan = "portscanner.scanner:main"

